# dot

./: .gitignore  README.md  dot.cabal  stack.yaml
example/: Example.hs  README.md  example.dot
src/: Dot.hs  Lib.hs
src/Data/Graph/Immutable/: Dot.hs
src/Dot/: Text.hs  Types.hs
