cabal-version: 2.2
name:
  dot
version:
  0.3
synopsis:
  Datatypes and encoding for graphviz dot files
description:
  Datatypes and encoding for graphviz dot files
homepage:
  https://github.com/andrewthad/dot
license:
  BSD-3-Clause
author:
  Andrew Martin
maintainer:
  Andrew Martin <andrew.thaddeus@gmail.com>
  chessai <chessai1996@gmail.com>
copyright:
  2019 Andrew Martin
category:
  Data,Graphics,Graphs
build-type:
  Simple

library
  hs-source-dirs:
    src
  exposed-modules:
    Dot.Types
    Dot.Text
  build-depends:
    , base >= 4.7 && < 5
    , text
  default-language:
    Haskell2010

source-repository head
  type:
    git
  location:
    https://github.com/andrewthad/dot
